W-14316889: fixed deployment-model test cases (#12939)